<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/titleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTV"
        android:hint="@string/enter_the_title_of_the_movie" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleET"
        android:text="@string/description"
        />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTV"
        android:hint="@string/enter_a_short_description_of_the_movie" />

    <TextView
        android:id="@+id/languageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionET"
        android:text="@string/language" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/languageRbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageTV">

        <RadioButton
            android:id="@+id/rbtnEnglish"
            android:text="@string/radioBtnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/radioBtnChinese"
            android:id="@+id/rbtnChinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/radioBtnMalay"
            android:id="@+id/rbtnMalay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/radioBtnTamil"
            android:id="@+id/rbtnTamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/releaseDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageRbtn"
        android:text="@string/release_date"
        />
    <EditText
        android:id="@+id/releaseDateET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/releaseDateTV"
        android:hint="@string/enter_release_date"
        />

    <CheckBox
        android:id="@+id/chkBoxAudience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/releaseDateET"
        android:text="@string/not_suitable_for_all_audience" />


    <CheckBox
        android:id="@+id/chkBoxViolence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_toRightOf="@id/chkBoxViolence"
        android:layout_below="@id/chkBoxAudience"
        android:text="@string/violence" />

    <CheckBox
        android:id="@+id/chkBoxLanguageUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkBoxAudience"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/chkBoxViolence"
        android:text="@string/language_used" />


</RelativeLayout>